Added missing parenthesis
Signed-off-by: Austreng <kolbjora@stud.ntnu.no>

--- a/System_design/handout_draft.tex
+++ b/System_design/handout_draft.tex
@@ -137,7 +137,7 @@ Sends the elevator to the floor of a specific order.
 Saves an order from either \textit{Environment Controller} or \textit{Order Distributor} to the backlog. Returns acknowledgement.
 \subsubsection*{+ updateOrderState(Order, newState) ok}
 Changes the state of a specific order. Returns acknowledgement.
-\subsubsection*{+ updateElevatorState(int floor, enum direction}
+\subsubsection*{+ updateElevatorState(int floor, enum direction)}
 Communicates the position and direction of the elevator to the \textit{Backlog}.
 \subsubsection*{+ getCost(Order) cost}
 Returns the cost of taking a specific order for this elevator.
